--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <nav>
                     <ul>
                         <li><a class="link-1" href="#">About</a></li>
-                        <li><a class="link-1" href="#">Players</a></li>
+                        <li><a class="link-1" href="#">Popular Players</a></li>
                         <li><a class="link-1" href="#">Tournaments</a></li>
                     </ul>
                 </nav>
@@ -43,7 +43,37 @@
 
         </div>
 
+        <div class="players">
+            <h2>popular players</h2>
+            <div class="row">
+                <div class="small-4 column">
+                    <img src="images/injera.jpg" height="250" width="250">
+                    <p>Date of Birth: 18 October 1986
+                        <br>Position: Wing/Center
+                        <br>Club : Mwamba RFC
+                        <br>School Attended: Vihiga High
+                        <br>Injera is not mostly for his breathtaking speed in open space that has seen him become Kenya's all time try scorer in the IRB circuit. But he also possesses a devastating handoff that often sends opposing tacklers tumbling.
+                    </p>
+                </div>
+                <div class="small-4 column">
+                    <img src="images/kayange.jpg" height="250" width="250">
+                </div>
+                <div class="small-4 column">
+                    <img src="images/amonde.jpg" height="250" width="250">
+                </div>
 
+
+            </div>
+            <div class="row">
+                <div class="small-4 column"></div>
+                <div class="small-4 column"></div>
+                <div class="small-4 column"></div>
+
+
+            </div>
+
+
+        </div>
 
     </div>
 </body>
