--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="players">
-            <h2>popular players</h2>
+            <h2 style="text-align:center;color:white">popular players</h2>
             <div class="row">
                 <div class="small-4 column">
                     <img src="images/injera.jpg" height="250" width="250">
@@ -57,9 +57,19 @@
                 </div>
                 <div class="small-4 column">
                     <img src="images/kayange.jpg" height="250" width="250">
+                    <p>Date of Birth: 20 July 1982
+                        <br>Position: Forward
+                        <br>Club Side: Mwamba RFC
+                        <br>School Attended: St Peters Mumias
+                        <br>Kayange was named by legendary New Zealand coach Gordon Tietjens as one of the best sevens players in the world. His height at 6'6" makes him priceless in lineouts and in recovering kickoffs, both of which he does with aplomb</p>
                 </div>
                 <div class="small-4 column">
                     <img src="images/amonde.jpg" height="250" width="250">
+                    <p>Date of Birth: 25 December 1983
+                        <br>Position: Forward
+                        <br>Club Side: KCB
+                        <br>School Attended: Kisumu Boys
+                        <br>Amonde weighing at over 100kg, Amonde is the battering ram of the Kenya team but is also adept at creating step with a sidestep and a quick pass. Amonde started rugby at Kisumu Boys high school before joining Kisumu RFC and later KCB. </p>
                 </div>
 
 
