--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="medium-6 column">
                     <h1 style="margin-top:100px;font-size:80px;">Shujaa</h1>
 
+
                 </div>
 
 
@@ -46,7 +47,7 @@
         <div class="players">
             <h2 style="text-align:center;color:white">popular players</h2>
             <div class="row">
-                <div class="small-4 column">
+                <div class="medium-4 column">
                     <img src="images/injera.jpg" height="250" width="250">
                     <p>Date of Birth: 18 October 1986
                         <br>Position: Wing/Center
@@ -55,7 +56,7 @@
                         <br>Injera is not mostly for his breathtaking speed in open space that has seen him become Kenya's all time try scorer in the IRB circuit. But he also possesses a devastating handoff that often sends opposing tacklers tumbling.
                     </p>
                 </div>
-                <div class="small-4 column">
+                <div class="medium-4 column">
                     <img src="images/kayange.jpg" height="250" width="250">
                     <p>Date of Birth: 20 July 1982
                         <br>Position: Forward
@@ -63,7 +64,7 @@
                         <br>School Attended: St Peters Mumias
                         <br>Kayange was named by legendary New Zealand coach Gordon Tietjens as one of the best sevens players in the world. His height at 6'6" makes him priceless in lineouts and in recovering kickoffs, both of which he does with aplomb</p>
                 </div>
-                <div class="small-4 column">
+                <div class="medium-4 column">
                     <img src="images/amonde.jpg" height="250" width="250">
                     <p>Date of Birth: 25 December 1983
                         <br>Position: Forward
@@ -75,9 +76,9 @@
 
             </div>
             <div class="row">
-                <div class="small-4 column"></div>
-                <div class="small-4 column"></div>
-                <div class="small-4 column"></div>
+                <div class="medium-4 column"></div>
+                <div class="medium-4 column"></div>
+                <div class="medium-4 column"></div>
 
 
             </div>
