--- a/index.html
+++ b/index.html
@@ -74,11 +74,45 @@
                 </div>
 
 
+                <div style="text-align:center">
+                    <img src="images/ayange.jpg">
+                    <p>Date of Birth: 21 May 1989
+                        <br>Position: Back
+                        <br>Club Side: Kenya Harlequin FC
+                        <br>School Attended: Kakamega High
+                        <br>Ayange is one player who can play any position in sevens. He is a good distributor. Has an amazing burst of speed which often leaves defenders for dead. And has enough strength to play in the scrum.</p>
+                </div>
+
+
+
             </div>
             <div class="row">
-                <div class="medium-4 column"></div>
-                <div class="medium-4 column"></div>
-                <div class="medium-4 column"></div>
+                <div class="medium-4 column">
+                    <img src="images/adema.jpg" height="250" width="250">
+                    <p>Date of Birth: 1 September 1987
+                        <br>Position: Back
+                        <br>Club Side: Nondescript RFC
+                        <br>School Attended: St Marys Nairobi
+                        <br>Adema can feature at both scrum half and centre. He has good speed. But one of the less discussed components of his game is his ability as a cover tackler which is brilliant. Perhaps the best sweeper in the Kenyan team over the past few years. Adema who started rugby at St Marys is one of the last few players coming from this school which used to produce a very high propotion of the Kenya sevens and fifteens teams.</p>
+                </div>
+                <div class="medium-4 column">
+                    <img src="images/asego.jpg" height="250" width="250">
+                    <p>Date of Birth: 25 May 1984
+                        <br>Position: Back
+                        <br>Club Side: Mwamba RFC
+                        <br>School Attended: St Marys Yala
+                        <br>Asego is another highly experienced player having made his IRB sevens debut in 2008. He is possibly the best playmaker ever to don the Kenya jersey. His ability to find open spaces and release team-mates for easy tries has been a key component of Kenya's game in the past 5 years. He is also an excellent place kicker.</p>
+                </div>
+                <div class="medium-4 column" height="250" width="250">
+                    <img src="images/wanjala.jpg">
+                    <p>Date of Birth: 16 August 1989
+                        <br>Position: Back
+                        <br>Club Side: Strathmore Leos
+                        <br>School Attended: Bungoma High
+                        <br>Wanjala saw more playing time at scrum half than anyone else during the 2013 season. He has an excellent work rate.
+
+                    </p>
+                </div>
 
 
             </div>
