--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="tools/stylesheets.css">
     <link rel="stylesheet" href="tools/foundation.css">
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="tools/animate.css">
 </head>
 
 <body>
@@ -26,7 +28,7 @@
 
             <div class="row">
                 <div class="medium-6 column">
-                    <h1 style="margin-top:100px;font-size:80px;">Shujaa</h1>
+                    <h1 class="animated wobble" style="margin-top:80px;font-size:100px;color:aqua">Shujaa</h1>
 
 
                 </div>
@@ -93,7 +95,7 @@
                         <br>Position: Back
                         <br>Club Side: Nondescript RFC
                         <br>School Attended: St Marys Nairobi
-                        <br>Adema can feature at both scrum half and centre. He has good speed. But one of the less discussed components of his game is his ability as a cover tackler which is brilliant. Perhaps the best sweeper in the Kenyan team over the past few years. Adema who started rugby at St Marys is one of the last few players coming from this school which used to produce a very high propotion of the Kenya sevens and fifteens teams.</p>
+                        <br>Adema can feature at both scrum half and centre. He has good speed. But one of the less discussed components of his game is his ability as a cover tackler which is brilliant. Perhaps the best sweeper in the Kenyan team over the past few years.</p>
                 </div>
                 <div class="medium-4 column">
                     <img src="images/asego.jpg" height="250" width="250">
