--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="tools/foundation.css">
     <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="tools/animate.css">
+    <script src="tools/mainscript.js"></script>
 </head>
 
 <body>
@@ -16,8 +17,8 @@
             <header>
                 <nav>
                     <ul>
-                        <li><a class="link-1" href="#">About</a></li>
-                        <li><a class="link-1" href="#">Popular Players</a></li>
+                        <li><a class="link-1" href="#About">About</a></li>
+                        <li><a class="link-1" href="#Popular Players">Popular Players</a></li>
                         <li><a class="link-1" href="#">Tournaments</a></li>
                     </ul>
                 </nav>
@@ -36,7 +37,7 @@
 
                 <div class="medium-6 column">
                     <div style="margin-top:80px">
-                        <h2>About</h2>
+                        <h2 id="About">About</h2>
                         <p>The Kenya national rugby sevens team competes in the World Rugby Sevens Series, Rugby World Cup Sevens and the Commonwealth Games. They are currently one of the 15 &#39;core teams&#39; of the World Series, with a guaranteed place in all ten events each season. Kenya recorded its first tournament win in the 2015–16 World Rugby Sevens Series after beating Fiji at the 2016 Singapore Sevens</p>
                     </div>
 
@@ -47,10 +48,10 @@
         </div>
 
         <div class="players">
-            <h2 style="text-align:center;color:white">popular players</h2>
+            <h2 id="Popular Players" style="text-align:center;color:aqua">Popular Players</h2>
             <div class="row">
                 <div class="medium-4 column">
-                    <img src="images/injera.jpg" height="250" width="250">
+                    <img src="images/CollinsInjera.jpg" height="250" width="250">
                     <p>Date of Birth: 18 October 1986
                         <br>Position: Wing/Center
                         <br>Club : Mwamba RFC
@@ -59,7 +60,7 @@
                     </p>
                 </div>
                 <div class="medium-4 column">
-                    <img src="images/kayange.jpg" height="250" width="250">
+                    <img src="images/kay.jpg" height="250" width="250">
                     <p>Date of Birth: 20 July 1982
                         <br>Position: Forward
                         <br>Club Side: Mwamba RFC
@@ -67,7 +68,7 @@
                         <br>Kayange was named by legendary New Zealand coach Gordon Tietjens as one of the best sevens players in the world. His height at 6'6" makes him priceless in lineouts and in recovering kickoffs, both of which he does with aplomb</p>
                 </div>
                 <div class="medium-4 column">
-                    <img src="images/amonde.jpg" height="250" width="250">
+                    <img src="images/amonde.jpg" height="200" width="250">
                     <p>Date of Birth: 25 December 1983
                         <br>Position: Forward
                         <br>Club Side: KCB
@@ -97,6 +98,7 @@
                         <br>School Attended: St Marys Nairobi
                         <br>Adema can feature at both scrum half and centre. He has good speed. But one of the less discussed components of his game is his ability as a cover tackler which is brilliant. Perhaps the best sweeper in the Kenyan team over the past few years.</p>
                 </div>
+                <hr>
                 <div class="medium-4 column">
                     <img src="images/asego.jpg" height="250" width="250">
                     <p>Date of Birth: 25 May 1984
