--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <br>School Attended: St Marys Nairobi
                         <br>Adema can feature at both scrum half and centre. He has good speed. But one of the less discussed components of his game is his ability as a cover tackler which is brilliant. Perhaps the best sweeper in the Kenyan team over the past few years.</p>
                 </div>
-                <hr>
+
                 <div class="medium-4 column">
                     <img src="images/asego.jpg" height="250" width="250">
                     <p>Date of Birth: 25 May 1984
@@ -120,8 +120,17 @@
 
 
             </div>
+        </div>
+        <div>
+            <h2 style="text-align:center">Tournament</h2>
+            <div style="text-align:center;padding-right:60px;padding-left:60px">
+                <p><i>The singapore 7's cup</i> is the ultimate best competition for the Kenya shujaa team having won the first main cup.Kenya pulled off a stunning 30-7 victory over Fiji in the final of the Singapore Sevens to capture their first World Series event and join the growing list of contenders for the Olympic gold medal in Rio.</p>
 
+            </div>
 
+            <div style="text-align:center">
+                <iframe width="870" height="500" src="https://www.youtube.com/embed/d_1-6y-NsEk" frameborder="0" allowfullscreen></iframe>
+            </div>
         </div>
 
     </div>
