--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="tools/animate.css">
     <script src="tools/mainscript.js"></script>
+    <script src="https://use.fontawesome.com/a6975973c7.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Exo' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -68,7 +70,7 @@
                         <br>Kayange was named by legendary New Zealand coach Gordon Tietjens as one of the best sevens players in the world. His height at 6'6" makes him priceless in lineouts and in recovering kickoffs, both of which he does with aplomb</p>
                 </div>
                 <div class="medium-4 column">
-                    <img src="images/amonde.jpg" height="200" width="250">
+                    <img src="images/amonde.jpg" height="120" width="180">
                     <p>Date of Birth: 25 December 1983
                         <br>Position: Forward
                         <br>Club Side: KCB
@@ -100,7 +102,7 @@
                 </div>
 
                 <div class="medium-4 column">
-                    <img src="images/asego.jpg" height="250" width="250">
+                    <img src="images/asego.jpg" height="280" width="250">
                     <p>Date of Birth: 25 May 1984
                         <br>Position: Back
                         <br>Club Side: Mwamba RFC
@@ -120,16 +122,41 @@
 
 
             </div>
-        </div>
-        <div>
-            <h2 style="text-align:center">Tournament</h2>
-            <div style="text-align:center;padding-right:60px;padding-left:60px">
-                <p><i>The singapore 7's cup</i> is the ultimate best competition for the Kenya shujaa team having won the first main cup.Kenya pulled off a stunning 30-7 victory over Fiji in the final of the Singapore Sevens to capture their first World Series event and join the growing list of contenders for the Olympic gold medal in Rio.</p>
 
-            </div>
+            <div class="tourn">
+                <h2 style="text-align:center">Tournament</h2>
+                <div style="text-align:center;padding-right:60px;padding-left:60px">
+                    <p><b>The singapore 7's cup</b> is the ultimate best competition for the Kenya shujaa team having won the first main cup.Kenya pulled off a stunning 30-7 victory over Fiji in the final of the Singapore Sevens to capture their first World Series event and join the growing list of contenders for the Olympic gold medal in Rio.</p>
 
-            <div style="text-align:center">
-                <iframe width="870" height="500" src="https://www.youtube.com/embed/d_1-6y-NsEk" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <div id="sides">
+                    <div> shujaa</div>
+                </div>
+
+                <div style="text-align:center">
+                    <iframe width="870" height="500" src="https://www.youtube.com/embed/d_1-6y-NsEk" frameborder="0" allowfullscreen></iframe>
+                </div>
+
+
+
+
+                <div class="bottom">
+                    <footer>
+                        <p>&copy; SHUJAA&#124;&#124;Get more updates</p>
+                        <ul>
+                            <li>
+                                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                            </li>
+
+                        </ul>
+                    </footer>
+                </div>
             </div>
         </div>
 
