--- a/index.html
+++ b/index.html
@@ -78,16 +78,18 @@
                         <br>Amonde weighing at over 100kg, Amonde is the battering ram of the Kenya team but is also adept at creating step with a sidestep and a quick pass. Amonde started rugby at Kisumu Boys high school before joining Kisumu RFC and later KCB. </p>
                 </div>
 
-
-                <div style="text-align:center">
-                    <img src="images/ayange.jpg">
-                    <p>Date of Birth: 21 May 1989
-                        <br>Position: Back
-                        <br>Club Side: Kenya Harlequin FC
-                        <br>School Attended: Kakamega High
-                        <br>Ayange is one player who can play any position in sevens. He is a good distributor. Has an amazing burst of speed which often leaves defenders for dead. And has enough strength to play in the scrum.</p>
+                <div class="row" style="padding-bottom:50px;margin-left:20px">
+                    <div class="medium-6 column">
+                        <img src="images/ayange.jpg" width=200 height="200">
+                    </div>
+                    <div class="medium-6 column">
+                        <p>Date of Birth: 21 May 1989
+                            <br>Position: Back
+                            <br>Club Side: Kenya Harlequin FC
+                            <br>School Attended: Kakamega High
+                            <br>Ayange is one player who can play any position in sevens. He is a good distributor. Has an amazing burst of speed which often leaves defenders for dead. And has enough strength to play in the scrum.</p>
+                    </div>
                 </div>
-
 
 
             </div>
@@ -129,8 +131,8 @@
                     <p><b>The singapore 7's cup</b> is the ultimate best competition for the Kenya shujaa team having won the first main cup.Kenya pulled off a stunning 30-7 victory over Fiji in the final of the Singapore Sevens to capture their first World Series event and join the growing list of contenders for the Olympic gold medal in Rio.</p>
 
                 </div>
-                <div id="sides">
-                    <div> shujaa</div>
+                <div id="">
+                    <div></div>
                 </div>
 
                 <div style="text-align:center">
